--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2 class="center">Kerry Buckley<br />IPRUG, 4 January 2011</h2>
       </div>
     </div>
+
     <div class="slide">
       <h1>Basics</h1>
       <div class="vcenter">
@@ -47,6 +48,27 @@
           describe "something" do
             it "does something" do
               ...
+            end
+          end
+        </pre>
+      </div>
+    </div>
+
+    <div class="slide">
+      <h1>Basics</h1>
+      <div class="vcenter">
+        <pre class="brush: ruby; gutter: false">
+          describe "something" do
+            context "during working hours"
+              it "does something" do
+                ...
+              end
+            end
+
+            context "outside working hours"
+              it "does something" do
+                ...
+              end
             end
           end
         </pre>
