Add outline of stuff to cover

--- a/index.html
+++ b/index.html
@@ -74,5 +74,74 @@
         </pre>
       </div>
     </div>
+
+    <!--
+      Things to cover:
+
+      why?
+        readable
+        shiny
+      gems
+        rspec
+        rspec-core
+        rspec-expectations
+        rspec-mocks
+        rspec-rails
+      describe/context/it/specify
+        doc output
+        implicit description
+        method convention
+        pending
+      running
+        http://relishapp.com/rspec/rspec-core
+        rspec
+        formatters
+          progress
+          documentation
+          html
+          fuubar
+        rake
+        autotest
+        spork
+        .rspec
+        filters/tags
+          if/unless
+        run by name (-e)
+      hooks
+      expectations/matchers
+        http://relishapp.com/rspec/rspec-expectations
+        built-in
+          should/should_not
+        test/unit
+        shoulda
+        custom
+          simple
+          full
+        exceptions
+          lambda
+          expect...to
+      before/after
+      let
+      stubs & mocks
+        http://relishapp.com/rspec/rspec-mocks
+        stub/should_receive
+        stub_chain
+        other frameworks
+      context
+        explicit
+        implicit
+        it
+        its
+          nested attributes
+      shared examples
+      rails
+        http://relishapp.com/rspec/rspec-rails
+        spec_helper
+        spec/support
+        model/controller/view/helper specs
+        adding methods to controller etc
+      cucumber
+
+    -->
   </body>
 </html>
