--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
     </div>
 
     <div class="slide">
-      <div class="vcenter">
-        <h1>Why RSpec?</h1>
-      </div>
+      <h1>Why RSpec?</h1>
     </div>
 
     <div class="slide">
-      <h1>Clear and readable</h1>
-      <div class="vcenter">
+      <h1>Why RSpec?</h1>
+      <h2>Clear and readable</h2>
         <pre class="brush: ruby; gutter: false">
           describe Stack do
             subject { Stack.new }
@@ -71,7 +69,6 @@
             end
           end
         </pre>
-      </div>
     </div>
 
     <div class="slide">
@@ -85,6 +82,17 @@
           <span style="color:green">1 example, 0 failures</span>
         </div>
       </div>
+    </div>
+
+    <div class="slide">
+      <h1>Gems</h1>
+      <ul>
+        <li>rspec</li>
+        <li>rspec-core</li>
+        <li>rspec-expectations</li>
+        <li>rspec-mocks</li>
+        <li>rspec-rails</li>
+      </ul>
     </div>
 
     <div class="slide">
