Correct documentation slide

--- a/index.html
+++ b/index.html
@@ -86,15 +86,16 @@
     </div>
 
     <div class="slide">
-      <h1>Documentation</h1>
+      <h1>Why RSpec?</h1>
+      <h2>Documentation</h2>
       <div class="vcenter">
         <div class="console">
           Stack<br />
-          &nbsp;&nbsp;on creation<br />
+          &nbsp;&nbsp;when new<br />
           &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:green">is empty</span><br />
           &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:green">has 0 items</span><br /><br />
           Finished in 0.01234 seconds<br />
-          <span style="color:green">1 example, 0 failures</span>
+          <span style="color:green">2 examples, 0 failures</span>
         </div>
       </div>
     </div>
