Tweak slippy js to allow HTML in pre elements
...which means I can now use a pre to show the console output with
colours.

--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
       <h1>Why RSpec?</h1>
       <h2>Documentation</h2>
       <div class="vcenter">
-        <div class="console">
-          Stack<br />
-          &nbsp;&nbsp;when new<br />
-          &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:green">is empty</span><br />
-          &nbsp;&nbsp;&nbsp;&nbsp;<span style="color:green">has 0 items</span><br /><br />
-          Finished in 0.01234 seconds<br />
+        <pre>
+          Stack
+            when new
+              <span style="color:green">is empty</span>
+              <span style="color:green">has 0 items</span>
+
+          Finished in 0.01234 seconds
           <span style="color:green">2 examples, 0 failures</span>
-        </div>
+        </pre>
       </div>
     </div>
 
@@ -185,22 +186,22 @@
     <!--
       Things to cover:
 
-      describe/context/it/specify
-        doc output
+      x describe/context/it/specify
+        x doc output
         implicit description
-        method convention
+        x method convention
         pending
       running
         http://relishapp.com/rspec/rspec-core
-        rspec
+        x rspec
         formatters
           progress
           documentation
           html
           fuubar
-        rake
-        autotest
-        spork
+        x rake
+        x autotest
+        x spork
         .rspec
         filters/tags
           if/unless
