--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
 
     <div class="slide">
-      <h1>Tags</h1>
+      <h1>Filtering by tag</h1>
       <div class="vcenter">
         <pre class="ruby">
           describe "Something" do
@@ -273,7 +273,7 @@
     </div>
 
     <div class="slide">
-      <h1>Tags with values</h1>
+      <h1>Filtering by tag value</h1>
       <div class="vcenter">
         <pre class="ruby">
           describe "Something" do
@@ -289,6 +289,23 @@
         <p>Run 1.8 specs:</p>
         <pre>
           rspec --tag ruby:1.8
+        </pre>
+      </div>
+    </div>
+
+    <div class="slide">
+      <h1>Implicit filtering</h1>
+      <div class="vcenter">
+        <pre class="ruby">
+          describe "Something" do
+            it "behaves one way in 1.8", if =&gt; { VERSION =~ /^1.8/ } do
+              ...
+            end
+
+            it "behaves another way in 1.9", if =&gt; { VERSION =~ /^1.9/ } do
+              ...
+            end
+          end
         </pre>
       </div>
     </div>
