Should and should_not

--- a/index.html
+++ b/index.html
@@ -428,6 +428,19 @@
       </div>
     </div>
 
+    <div class="slide">
+      <h1>Matchers</h1>
+      <div class="vcenter">
+        <p>RSpec adds <code>should</code> and <code>should_not</code> to all objects.</p>
+        <pre class="ruby">
+          (2 + 2).should == 4
+
+          "foo".should_not == "bar"
+        </pre>
+        <p>Of course you can check a lot more than equality&hellip;</p>
+      </div>
+    </div>
+
     <!--
       Things still to cover:
 
