--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
     </div>
 
     <div class="slide">
+      <h1>Formatters</h1>
+      <h2>Multiple formatters</h2>
+      <div class="vcenter">
+        <pre>
+          $ rspec -f Fuubar -f html -o specs.html spec/
+        </pre>
+      </div>
+    </div>
+
+    <div class="slide">
       <h1>Pending specs</h1>
       <pre class="ruby">
         describe "Something" do
